--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@ html, body {
 
 * {
     font-family: 'Courier New', Courier, monospace;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 
 #noscript {
@@ -76,20 +79,20 @@ html, body {
     border-left-width: 0px;
     border-right-width: 0px;
     cursor: pointer;
+    height: 70px;
 }
 
 .item-info-container {
     display: flex;
-    justify-content: space-around;
-    width: 60%;
+    width: 80%;
 }
 
 .item-info-container > img {
-    height: 70px;
+    height: 100%;
 }
 
 .item-amount-container {
-    width: 40%;
+    width: 20%;
     text-align: right;
 }
 
