--- a/styles.css
+++ b/styles.css
@@ -130,11 +130,15 @@ html, body {
 }
 
 #buy-upgrades-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     height: 100px;
     min-height: 100px;
     width: 100%;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
+    overflow: auto;
 }
 
 #buy-multiplier-container {
