--- a/styles.css
+++ b/styles.css
@@ -203,6 +203,42 @@ button.dangerous {
     float: right;
 }
 
+#golden-cookie {
+    width: 100px;
+    height: 100px;
+    display: none;
+    position: absolute;
+    cursor: pointer;
+    z-index: 5;
+}
+
+.not-clickable {
+    pointer-events: none;
+}
+
+#golden-cookie-prize-display-container {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: inline;
+    border: 2px solid transparent;
+    border-radius: 20px;
+    position: absolute;
+    top: -300px;
+    left: 0;
+    right: 0;
+    animation: show-golden-cookie-prize-message 3s forwards;
+    text-align: center;
+    width: 50vw;
+    margin-left: auto;
+    margin-right: auto;
+    pointer-events: none;
+}
+
+.golden-cookie-multiplier-flash {
+    color: goldenrod !important;
+    animation: fade-in-and-out 1s infinite !important;
+}
+
 @keyframes cookie-click {
     100% {
         transform: scale(0.95);
@@ -240,5 +276,45 @@ button.dangerous {
     }
     100% {
         opacity: 1;
+    }
+}
+
+@keyframes golden-cookie-fade-in {
+    0% {
+        transform: scale(0) rotate(180deg);
+        opacity: 0;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@keyframes golden-cookie-fade-out {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(0) rotate(180deg);
+        opacity: 0;
+    }
+}
+
+@keyframes show-golden-cookie-prize-message {
+    0% {
+        top: -300px;
+    }
+    100% {
+        top: 20px;
+    }
+}
+
+@keyframes hide-golden-cookie-prize-message {
+    0% {
+        top: 20px;
+    }
+    100% {
+        top: -300px;
     }
 }
